fixed reader vertical overflow on short screen heights

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -46,7 +46,6 @@ header menu a {
 
 main {
   height: 100%;
-  margin: 20px 0;
 }
 
 main section {
@@ -149,7 +148,7 @@ button:hover,
 }
 
 #reader nav {
-  margin: 10px 10px 0 10px;
+  margin: 0 10px;
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
